--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 </head>
 
-<body class="">
+<body class="font-[Manrope]">
     <!-- Main content -->
     <main class="max-w-screen-xl mx-auto px-16 md:">
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- Text Conten -->
             <div>
                 <h1 class="text-5xl md:text-7xl  text-[#Dark 01]">
@@ -38,7 +38,8 @@
             <div class="relative">
                 <div><img class="w-full" src="./images/banner.png" alt=""></div>
                 <!-- card -->
-                <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-90 md:left-32 lg:left-28 ">
+                <div
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-90 md:left-32 lg:left-28 ">
                     <!-- icon -->
                     <div><i class="fa-solid fa-star text-amber-500"></i></div>
                     <!-- text  -->
@@ -50,6 +51,54 @@
                 </div>
             </div>
         </header>
+        <!-- Featur Products Section -->
+        <section class="py-8 lg:py-24">
+            <div class="text-center mb-8">
+                <!-- Titles -->
+                <h1 class="text-xl md:text-4xl font-bold mb-2">Our Featured Products</h1>
+                <p class="text-[#777777] max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+            <!-- Grid Card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-center">
+                <!-- card -Product1 -->
+                <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+                    <img class="mx-auto pt-3" src="./images/tea-1.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card -Product2 -->
+                  <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+                    <img class="mx-auto pt-3" src="./images/tea-2.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Black Tea</h2>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card -Product3 -->
+                  <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+                    <img class="mx-auto pt-3" src="./images/tea-3.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Lemon Tea</h2>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                 <!-- card -Product4 -->
+                
+                  <div class="rounded-lg shadow-md bg-[#F4F4F4] overflow-hidden">
+                    <img class="mx-auto pt-3" src="./images/tea-4.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Green Tea</h2>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+
     </main>
 </body>
 
