thir section done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="font-[Manrope]">
     <!-- Main content -->
     <main class="max-w-screen-xl mx-auto px-16 md:">
-        <header class="lg:flex pt-10 mb-20">
+        <header class="lg:flex items-center pt-10 mb-20">
             <!-- Text Conten -->
             <div>
                 <h1 class="text-5xl md:text-7xl  text-[#Dark 01]">
@@ -98,7 +98,33 @@
                 
             </div>
         </section>
-
+        <!-- Great Tea Section  -->
+         <section class="mb-24">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <!-- img section -->
+                 <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+                    <div class="h-38 bg-gradient-to-r from-red-100 to-red-100 rounded-[10px]"></div>
+                    <div class="bg-orange-200 rounded-xl row-span-2">
+                        <img class="mx-auto my-5-" src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-[#577639] rounded-xl row-span-2">
+                        <img class="mx-auto my-5-" src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-38 bg-gradient-to-r from-stone-200-100 to-slate-300 rounded-[10px]"></div>
+                 </div>
+                 <!-- Text section -->
+                  <div>
+                    <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                  <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                  <br>
+                  <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+                  <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                  <br>
+                  <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+                  <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                  </div>
+            </div>
+         </section>
     </main>
 </body>
 
